[gd_scene load_steps=4 format=3 uid="uid://desy7txx62pb2"]

[ext_resource type="Script" path="res://examples/single_plot.gd" id="1_62wlx"]
[ext_resource type="Script" path="res://addons/graph_2d/graph_2d.gd" id="2_y0q6u"]
[ext_resource type="Script" path="res://addons/graph_2d/floating_legend.gd" id="3_7par3"]

[node name="SinglePlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62wlx")

[node name="Graph2D" type="Control" parent="."]
anchors_preset = 0
offset_left = 282.0
offset_right = 1141.0
offset_bottom = 635.0
script = ExtResource("2_y0q6u")
x_label = "X"
y_min = -53.0
y_max = 50.0
show_legend = false
background_color = Color(0.280876, 0.373644, 0.701865, 1)
grid_horizontal_visible = true
grid_vertical_visible = true

[node name="AddPlot" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 37.0
offset_right = 210.0
offset_bottom = 68.0
text = "Add New Plot"

[node name="RemoveAllPlots" type="Button" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 98.0
offset_right = 206.0
offset_bottom = 129.0
text = "Remove All Plots"

[node name="FloatingLegend" type="Control" parent="." node_paths=PackedStringArray("graph")]
anchors_preset = 0
offset_left = 52.4538
offset_top = 281.007
offset_right = 92.4538
offset_bottom = 321.007
script = ExtResource("3_7par3")
graph = NodePath("../Graph2D")

[connection signal="pressed" from="AddPlot" to="." method="_on_add_plot_pressed"]
[connection signal="pressed" from="RemoveAllPlots" to="." method="_on_remove_all_plots_pressed"]
